Add validation for a few inputs (like flow and uuid) in a few spots. (#548)
* Add validation for a few inputs (like flow and uuid) in a few spots.

* Add a couple of tests for bad uuids and errors being created.